--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "helmet": "^6.0.0",
     "jquery": "^3.6.0",
     "js-base64": "^3.6.1",
     "mailgun-js": "^0.22.0",
@@ -24,5 +25,6 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
-  }
+  },
+  "type": "module"
 }
