--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": "16.16.0"
+  }
 }
