--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
+    "node-geocoder": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
@@ -30,5 +31,8 @@
   "type": "module",
   "engines": {
     "node": "16.16.0"
+  },
+  "devDependencies": {
+    "@googlemaps/markerclusterer": "^2.4.0"
   }
 }
