--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "helmet": "^6.0.0",
+    "html-pdf": "^3.0.1",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "node-geocoder": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "pdf-puppeteer": "^1.1.11"
   },
   "type": "module",
   "devDependencies": {
