Table in pdf on one page

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "type": "module",
   "devDependencies": {
     "@googlemaps/markerclusterer": "^2.4.0"
+  },
+  "engines": {
+    "node": "16.14.2"
   }
 }
