--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-local-mongoose": "^5.0.1",
     "pdf-puppeteer": "^1.1.11",
     "phantom-html-to-pdf": "^0.8.3",
-    "wkhtmltopdf": "^0.4.0"
+    "wkhtmltopdf": "^0.4.0",
+    "mongoose-paginate-v2": "^1.7.4"
   },
   "type": "module",
   "devDependencies": {
