--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "express-session": "^1.17.0",
     "helmet": "^6.0.0",
     "html-pdf": "^3.0.1",
+    "ipware": "^2.0.0",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
+    "mongoose-paginate-v2": "^1.7.4",
     "node-geocoder": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pdf-puppeteer": "^1.1.11",
     "phantom-html-to-pdf": "^0.8.3",
-    "wkhtmltopdf": "^0.4.0",
-    "mongoose-paginate-v2": "^1.7.4"
+    "wkhtmltopdf": "^0.4.0"
   },
   "type": "module",
   "devDependencies": {
